# lemonade-tokio

./: .clippy.toml  .dockerignore  .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  deny.toml  justfile
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: benchmark.yml  ci.yml  dependabot.yml
config/: README.md  load-balancer.toml  load-balancer.yaml  worker-1.toml  worker-2.json  worker-3.yaml  worker-4.toml
config/load-balancer/: adaptive.toml  fastest-response-time.json  fastest-response-time.toml  least-connections.toml  least-connections.yaml  round-robin.json  round-robin.toml  weighted-round-robin.toml  weighted-round-robin.yaml
config/worker/: worker-1.toml  worker-2.toml  worker-3.toml
crates/bench-utils/: Cargo.toml  README.md
crates/bench-utils/src/: lib.rs
crates/load-balancer/: Cargo.toml
crates/load-balancer/src/: algorithms.rs  backend.rs  config.rs  error.rs  lib.rs  main.rs  state.rs
crates/load-balancer/src/proxy/: mod.rs  utils.rs
crates/load-balancer/src/strategies/: adaptive.rs  constants.rs  error.rs  least_connections.rs  mod.rs  round_robin.rs  weighted_round_robin.rs
crates/worker-actix/: Cargo.toml
crates/worker-actix/src/: handlers.rs  main.rs
crates/worker-axum/: Cargo.toml
crates/worker-axum/src/: handlers.rs  main.rs
crates/worker-metrics/: Cargo.toml
docker/: Dockerfile  README.md  docker-compose.yml
docker/grafana/dashboards/: lemonade.json  load-balancer.json  worker-actix.json  worker-axum.json  worker-hyper.json  worker-rocket.json
docker/grafana/provisioning/datasources/: datasources.yml
docker/otel-collector/: config.yaml
docker/prometheus/: prometheus.yml
docs/: architecture.md  deployment.md  development.md  research.md
docs/quality-reports/: old.md
lemonade/: Cargo.toml  README.md
lemonade-load-balancer/: Cargo.toml  README.md
lemonade-load-balancer/src/: app.rs  error.rs  helpers.rs  lib.rs  prelude.rs
lemonade-load-balancer/src/config/: builder.rs  error.rs  mod.rs  models.rs  port.rs
lemonade-load-balancer/src/config/impls/: mod.rs  notify.rs  static.rs  static_impl.rs
lemonade-load-balancer/src/health/: error.rs  mod.rs  models.rs  port.rs
lemonade-load-balancer/src/health/adapters/: backend.rs  mod.rs
lemonade-load-balancer/src/metrics/: error.rs  mod.rs  models.rs  port.rs
lemonade-load-balancer/src/metrics/adapters/: aggregating.rs  external.rs  mod.rs
lemonade-load-balancer/src/proxy/: error.rs  mod.rs  models.rs  port.rs
lemonade-load-balancer/src/proxy/adapters/: mod.rs  tokio_proxy.rs
lemonade-load-balancer/src/strategy/: builder.rs  constants.rs  error.rs  mod.rs  models.rs  port.rs
lemonade-load-balancer/src/strategy/adapters/: fastest_response_time.rs  least_connections.rs  mod.rs  round_robin.rs  weighted_round_robin.rs
lemonade-load-balancer/src/strategy/adapters/adaptive/: cache.rs  constants.rs  mod.rs  models.rs  utils.rs
lemonade-load-balancer/src/types/: backend.rs  backend_address.rs  backend_meta.rs  channel_bundle.rs  connection_registry.rs  context.rs  health_registry.rs  metrics_registry.rs  mod.rs  route_table.rs
lemonade-load-balancer/tests/: main.rs
lemonade-load-balancer/tests/app/: mod.rs
lemonade-load-balancer/tests/common/: fixtures.rs  mod.rs  strategies.rs
lemonade-load-balancer/tests/config/: mod.rs  test_builder.rs  test_notify.rs
lemonade-load-balancer/tests/health/: mod.rs  test_backend.rs
lemonade-load-balancer/tests/metrics/: mod.rs  test_aggregating.rs  test_external.rs
lemonade-load-balancer/tests/proxy/: mod.rs  test_tokio.rs
lemonade-load-balancer/tests/strategy/: mod.rs  test_builder.rs  test_least_connections.rs  test_models.rs  test_round_robin.rs  test_weighted_round_robin.rs
lemonade-load-balancer/tests/types/: mod.rs  test_backend.rs  test_backend_address.rs  test_backend_meta.rs  test_channel_bundle.rs  test_connection_registry.rs  test_context.rs  test_health_registry.rs  test_metrics_registry.rs  test_route_table.rs
lemonade-observability/: Cargo.toml  README.md
lemonade-observability/src/: init.rs  lib.rs  metrics.rs  resource.rs
lemonade-service/: Cargo.toml  README.md
lemonade-service/src/: error_response.rs  lib.rs
lemonade-service/src/config/: builder.rs  error.rs  mod.rs  serde_helpers.rs  worker_address.rs
lemonade-service/src/worker/: constants.rs  mod.rs  service.rs
lemonade-service/src/worker/health/: error.rs  mod.rs  models.rs  port.rs
lemonade-service/src/worker/work/: error.rs  mod.rs  models.rs  port.rs
lemonade-service/tests/: test_config.rs  test_health.rs  test_service.rs  test_work.rs
lemonade-service/tests/common/: mod.rs
lemonade-worker-actix/: Cargo.toml
lemonade-worker-actix/src/: handler.rs  lib.rs
lemonade-worker-axum/: Cargo.toml
lemonade-worker-axum/src/: handler.rs  lib.rs  router.rs
lemonade-worker-hyper/: Cargo.toml
lemonade-worker-hyper/src/: handler.rs  lib.rs
lemonade-worker-rocket/: Cargo.toml
lemonade-worker-rocket/src/: fairing.rs  handler.rs  lib.rs
lemonade/benches/: lemonade_benchmark.rs
lemonade/src/: commands.rs  handlers.rs  lib.rs  main.rs
scripts/: load-test.sh  profile.sh  setup-profiling.sh
worker-actix/: Cargo.toml
