[workspace]
members = [
    "lemonade",
    "lemonade-load-balancer", 
    "lemonade-observability",
    "lemonade-service", 
    "lemonade-worker-actix", 
    "lemonade-worker-axum", 
    "lemonade-worker-hyper", 
    "lemonade-worker-rocket"
]
resolver = "3"

[workspace.dependencies]
# Serialization and deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.9"

# Environment variables
dotenv = "0.15.0"

# Error handling
thiserror = "2.0"

# Async traits
async-trait = "0.1"

# Async runtime
tokio = { version = "1.48", features = ["full"] }

# Tests
mockall = "0.14.0"
proptest = "1.9"
quickcheck = "1.0"
rstest = "0.26"
tempfile = "3.23"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Service implementation
lemonade-service = { path = "lemonade-service" }
lemonade-observability = { path = "lemonade-observability" }

# Observability
tracing = "0.1"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry", "fmt", "ansi", "json"] }
opentelemetry = { version = "0.31.0", features = ["trace", "metrics", "logs"] }
opentelemetry-otlp = { version = "0.31.0", features = ["trace", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.31.0", features = ["trace", "metrics", "logs", "rt-tokio"] }
opentelemetry-semantic-conventions = "0.31.0"
opentelemetry-stdout = "0.31.0"
prometheus = "0.14.0"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"

[workspace.package]
authors = ["Guillaume Mpouli <gmpouli@gmail.com"]
edition = "2024"
readme = "README.md"
license = "MIT"
homepage = ""
repository = ""
documentation = ""
publish = false
