[package]
name = "lemonade-load-balancer"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
publish.workspace = true

[dependencies]

# Workspace dependencies

async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

# External dependencies

## Atomic shared references
arc-swap = "1.7.1"

## Concurrent hash maps
dashmap = "6.1.0"

## File watching
notify = "8.2"

## Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
toml = "0.9"

## Environment variables
dotenv = { workspace = true }

## Observability
lemonade-observability = { path = "../lemonade-observability" }
tracing = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
proptest = { workspace = true }
quickcheck = { workspace = true }
rstest = { workspace = true }
tempfile = "3.10"

[lints]
workspace = true
