[package]
name = "lemonade-observability"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
publish.workspace = true

[dependencies]
# Tracing
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }

# OpenTelemetry
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true, features = ["trace", "metrics", "grpc-tonic", "http-proto", "tokio"] }
opentelemetry_sdk = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
opentelemetry-stdout = { workspace = true }

# Prometheus (for future metrics integration)
prometheus = { workspace = true }

# Concurrent hash maps
dashmap = "6.1.0"

[lints]
workspace = true
