[package]
name = "lemonade-worker-actix"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
publish.workspace = true

[dependencies]
actix-web = "4.12.1"
tokio = { workspace = true }

# Workspace dependencies
lemonade-service = { workspace = true }
lemonade-observability = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
