[package]
name = "lemonade-worker-axum"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
publish.workspace = true

[dependencies]
axum = "0.8.8"
tokio = { workspace = true }
tower = "0.5.2"
tower-http = { version = "0.6.1", features = ["fs", "trace"] }

# Workspace dependencies
lemonade-service = { workspace = true }
lemonade-observability = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
