[package]
name = "lemonade-worker-hyper"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
publish.workspace = true

[dependencies]
hyper = { version = "1.8.1", features = ["server"] }
hyper-util = "0.1.4"
http-body-util = "0.1.1"
tokio = { workspace = true }
serde_json = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-http = { version = "0.31.0", features = ["hyper"] }

# Workspace dependencies
lemonade-service = { workspace = true }
lemonade-observability = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
