[package]
name = "lemonade-worker-rocket"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
publish.workspace = true

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
tokio = { workspace = true }
opentelemetry = { workspace = true }

# Workspace dependencies
lemonade-service = { workspace = true }
lemonade-observability = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
