[package]
name = "worker-actix"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4.8", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.48" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "chrono"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
